# rififis-a-phiphi

./: .gitignore  README.md  d.frontend.dockerfile  d.server.dockerfile  docker-compose.yml
app-frontend/: .gitignore  README.md  index.html  package.json
app-frontend/src/: App.vue  main.ts
app-frontend/src/assets/: base.scss
app-frontend/src/components/: ActionsButtons.vue  NameInput.vue  PlayerList.vue  RessourcesStates.vue
app-frontend/src/lib-ws/: store.ts  websocket.ts  ws-message.ts
app-frontend/src/plugins/: router.ts
app-frontend/src/views/: Game.vue  Lobby.vue
app-ws-server/: Cargo.toml  README.md  package.json  tsconfig.json
app-ws-server-rust/: Cargo.toml
app-ws-server-rust/src/: connection.rs  game.rs  main.rs  message.rs
app-ws-server/src/: client.ts  game_state.rs  index.ts  main.rs  messages.ts  player.rs
backend-new/: package.json
backend-new/prisma/: dev.db  schema.prisma
backend-new/src/: app.module.ts
backend-new/src/prisma/: prisma.service.ts
backend-new/src/socket/: socket.gateway.ts  socket.module.ts  socket.service.ts  socket.types.ts
common/: gameStatus.ts  index.ts
docs/: current_archi.drawio  target_archi.drawio
frontend/: index.html  package.json  vite.config.ts
frontend/nginx/: nginx.conf
frontend/src/: App.vue  main.ts  style.css  style.scss
frontend/src/components/: ActionsButtons.vue  ConnectionLostModal.vue  LobbyNameInput.vue  LobbyPlayerList.vue  NameInput.vue  PlayerList.vue  RessourcesStates.vue
server/: package.json  tsconfig.json
server/src/: action.ts  game.ts  index.ts  player.ts
(+13 files in other folders)
