[package]
name = "app-ws-server-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.25", default-features = false, features=["async-await", "sink", "std"]}
tokio = { version = "1.24.2", features=["net", "rt", "rt-multi-thread", "sync", "macros", "io-util", "time"]}
tokio-util = { version = "0.7.4", default-features = false, features=["codec"]}
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
tokio-tungstenite = "0.18.0"
uuid = { version="1.3.0", features=["v4"]}